# RayTracing_Cpp

./: .gitignore  CMakeLists.txt  README.md
src/: aabb.h  bvh.h  camera.h  dielectric.h  hitable_list.h  hittable.h  lambertian.h  main.cpp  material.h  metal.h  ray.h  scene.h  sphere.h  utils.h  vec3.h
tests/: test_hitable_list.cpp  test_ray.cpp  test_sphere.cpp  test_vec3.cpp
